<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0E8EA"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="94dp">

        <TextView
            android:id="@+id/tvPortada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:text="@string/bienvenido_a_wheremployee"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="@string/bienvenido_a_wheremployee"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imgPortada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/imagen_portada"
            android:textAlignment="center"
            android:visibility="visible"
            app:srcCompat="@drawable/portada"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnAccederJefe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80D8FF"
            android:onClick="accederJefe"
            android:text="@string/acceder_como_jefe"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnAccederEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80D8FF"
            android:onClick="accederEmpleado"
            android:text="@string/acceder_como_empleado"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnNuevaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#80D8FF"
            android:onClick="nuevaEmpresa"
            android:text="@string/crear_nueva_empresa"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>